[package]
name = "testserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.11"
base64 = "0.21.2"
chrono = "0.4.31"
hpke = "0.10.0"
prio = "0.12.2"
rand = "0.8.5"
serde = "1.0.138"
tokio = { version = "1.19.2", features = ["full"] }
